Remove two manual line breaks in our standard footer to better cope with narrower and wider screens and save vertical space for sufficiently wide ones.  Avoid the extra space at the top of the box commonly added by <p> styles.  Reword the sentence referring to gcc@gcc.gnu.org a bit.

--- a/htdocs/gcc.css
+++ b/htdocs/gcc.css
@@ -39,7 +39,7 @@ dl.status dd { margin-left:3ex; }
 }
 
 div.copyright {
-  font-size: 75%;
+  font-size: smaller;
   background: #f2f2f9;
   border: 2px solid #3366cc;
   border-style: solid;
